@@ -13,11 +13,21 @@
 
 namespace Inkscape {
 
+enum {
+    RENDERING_INTENT_UNKNOWN = 0,
+    RENDERING_INTENT_AUTO = 1,
+    RENDERING_INTENT_PERCEPTUAL = 2,
+    RENDERING_INTENT_RELATIVE_COLORIMETRIC = 3,
+    RENDERING_INTENT_SATURATION = 4,
+    RENDERING_INTENT_ABSOLUTE_COLORIMETRIC = 5
+};
+
 /** Color Profile. */
 struct ColorProfile : public SPObject {
     gchar* href;
     gchar* local;
     gchar* name;
+    gchar* intentStr;
     guint rendering_intent;
 #if ENABLE_LCMS
     cmsHPROFILE profHandle;
